# Bundesliga-Forecasting

./: .gitignore  pyproject.toml
scripts/: run_cleaning.py  run_data_creation.py
src/bundesliga_forecasting/: BL_config.py  BL_utils.py  analyse_seasons.py  clean_files.py  implement_features.py  inspect_df.py  merge_files.py  old.py  project_config.py  project_utils.py  rename_files.py
src/bundesliga_forecasting/data_creation/: base.py  config.py  pipeline.py  utils.py
src/bundesliga_forecasting/data_creation/io/: clean.py  clean_csv_directory.py  merge.py  merge_csv_directory.py  prepare.py
src/bundesliga_forecasting/data_editing/: config.py
src/bundesliga_forecasting/data_editing/features/: base.py
src/bundesliga_forecasting/data_editing/io/: config.py
src/bundesliga_forecasting/data_structuring/: S_config.py  S_pipeline.py  S_utils.py  structure_config.py  structure_pipeline.py  structure_utils.py
src/bundesliga_forecasting/data_structuring/structure/: S01_clean.py  S02_merge.py  S03_prepare.py  clean.py  merge.py  prepare.py
src/bundesliga_forecasting/feature_engineering/: F_config.py  F_pipeline.py  F_utils.py  feature_pipeline.py
src/bundesliga_forecasting/feature_engineering/features/: F01_score.py  F02_daily_table.py  F02_ranking.py  F02_season.py  F03_momentum.py  F03_performance.py  F04_current_season.py  F04_history.py  F05_differencing.py  F05_prev_season.py  F05_relativation.py  F06_poisson_selection.py  (+8 more)
src/bundesliga_forecasting/models/: M01_elnet_feature_selection.py  M02_poisson_regressor.py  M_config.py
vscode/: settings.json
