[project]
name = "bundesliga-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=1.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

#[project.scripts]
#bundesliga-create-data = "bundesliga_forecasting.data_creation.pipeline:data_creation"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]